--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+  },
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
